<resources>
    <string name="app_name">MqttClient</string>
    <string name="publish">Publish</string>
    <string name="enter_a_message">Enter a Message</string>
    <string name="subscribed_to_topic">Subscribed To Topic:</string>
    <string name="we_got_apk_file_click_to_install"> Click Here To Download Task </string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="deny">DENY</string>
    <string name="accept">ACCEPT</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mqtt Client</string>
    <string name="nav_header_subtitle">Mobile Client application to demo Mqtt implementation</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_subscribe">Subscribe</string>
    <string name="menu_unsubscribe">Unsubscribe</string>
    <string name="menu_received_tasks">Received Tasks</string>
    <string name="menu_executed_tasks">Executed Tasks</string>

    <string name="home_second">Home Second</string>
    <string name="would_you_like_to_get_notifications_for_every_task">Would you like to get notifications for every task?</string>
    <string name="retry_to_connect">Retry to Connect</string>
    <string name="connection_success">Connected Successfully!!!\n\n If you want to Subscribe to a topic please select Subscribe from Home menu</string>
    <string name="failed_connect">Failed to connect to MQTT Server. Do you want to retry connecting?</string>
    <string name="do_you_want_to_subscribe">Do you want to subscribe to the topic to receive tasks on your device?</string>
    <string name="do_you_want_to_unsubscribe">You can unsubscribe anytime from Home menu.</string>
    <string name="subscribing_please_wait">Subscribing, Please wait...</string>
    <string name="subscribing_done">Subscribed to topic successfully. If you want to unsubscribe, please tap on the button below.</string>
    <string name="subscribing_failed">Failed to Subscribe. Tap on ACCEPT to try again</string>
    <string name="unsubscribing_please_wait">Unsubscribing, Please wait...</string>
    <string name="unsubscribing_done">Unsubscribed to topic successfully.</string>
    <string name="unsubscribing_failed">Failed to Unsubscribe. Try again</string>
    <string name="received_pending_task_expires_in_about_1_s">Task expires in about %1$d</string>
    <string name="tap_on_link_to_download">Tap on YES  to start download and install executable file.</string>
    <string name="connect_to_mqtt">Connecting to MQTT Server...</string>

</resources>
