<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="10dp"
    android:background="@android:color/background_light">

    <TextView
        android:id="@+id/task_heading_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="@string/received_pending_task_expires_in_about_1_s"
        android:textSize="14sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/task_desc_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_margin="5dp"
        android:gravity="center"
        android:textSize="14sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/accept_btn1"
            android:text="@string/accept"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/deny_btn1"
            android:text="@string/deny"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>