<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@android:color/holo_blue_light">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        android:background="@android:color/white"
        android:gravity="center">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@mipmap/ic_launcher"
        />
    <LinearLayout
        android:id="@+id/id_task_description"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:visibility="gone"
        android:background="@android:color/white"
        android:gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@android:color/holo_orange_light"
            android:gravity="center">

    <TextView
        android:id="@+id/id_display_string_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:paddingBottom="20dp"
        android:textSize="20sp"
        android:textColor="@android:color/background_dark" />
    <LinearLayout
        android:id="@+id/message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_task_accept"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:visibility="visible"
            android:text="@string/accept"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/button_task_deny"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:visibility="visible"
            android:text="@string/deny"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white" />
    </LinearLayout>
    <TextView
        android:id="@+id/id_display_file_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:visibility="gone"
        android:text="@string/we_got_apk_file_click_to_install"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textStyle="italic"
        />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
